# rdp-manager

./: README.rst  pyproject.toml
rdp_manager/: __init__.py  rdp_manager.py
tests/: test_rdp_manager.py
