[tool.poetry]
name = "rdp-manager"
version = "0.1.0"
description = ""
authors = ["Alex Macniven <alex_macniven@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
pylint = "^2.11.1"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
rdp = "rdp_manager.rdp_manager:connect_command"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
